Handle tags from the ui
